  replaces the abandoned
  https://sourceforge.net/projects/sf-xpaint/files/libxaw3dxft/.

  Fixed GCC 14 FTB (incompatible pointer type) in XawIm.c.
  Fixed vertical spacing in List when FreeType is used.
  Fixed description in libxaw3dxft.pc.in (was from libXaw3d).
  Fixed omission of Xaw3dXftP.h from xaw3dinclude_HEADERS in Makefile.am.

  Began using normal Semantic Versioning.  libXaw3dXft version numbers no
  longer have anything to do with libXaw3d releases and no longer have a
  letter suffix.

  Spring cleaning:
  Removed generated files and the empty .deps directory.
  Removed files pertaining to Imake and Debian.
  Merged three Makefile.am files (recursive make considered harmful).
  Cleaned up Makefile.am and configure.ac.
  Made ChangeLog, AUTHORS, NEWS, and README as needed for compliance.

  libXaw3d changes merged:
  2013-06-06 2c16f322 Fix --disable-feature options in configure
  2014-06-05 15ffa3af configure: Drop AM_MAINTAINER_MODE
  2022-05-07 8a8fbec8 Build xz tarballs instead of bzip2
  2023-03-04 dbf8869b configure: Use LT_INIT from libtool 2 instead of deprecated AC_PROG_LIBTOOL
  2024-02-17 79134895 Remove unused sharedlib.c

2020-07-02, v1.6.2h (so 8.0.5)  Jean-Pierre Demailly

	* TextAction.c: further small enhancements to the edition routines,
	  in such a way that  _Xaw3dXft->edit_delete_alternative = 2
	  corresponds to the default behavior of modern text widgets.

2020-06-30, v1.6.2g  Jean-Pierre Demailly

	* Text.c: the new parameter _Xaw3dXft->text_sb_right (set to 1)
	  allows text widget scrollbars to be put on the right edge
	  of windows.

2020-06-16, v1.6.2f  Jean-Pierre Demailly

	* TextAction.c: two functions added, namely
	    DeleteBackwardCharOnly(), KillCurrentSelectionOrBackwardChar()
	  while DeleteBackwardChar() was modified, and corresponding
	  bindings
	    delete-previous-char-only,  kill-selection-or-char
	  introduced for app-defaults callbacks, so as to accommodate