@@ -11,6 +11,7 @@
   Fixed vertical spacing in List when FreeType is used.
   Fixed description in libxaw3dxft.pc.in (was from libXaw3d).
   Fixed omission of Xaw3dXftP.h from xaw3dinclude_HEADERS in Makefile.am.
+  Added Xdefaults and old READMEs to installed docs.
 
   Began using normal Semantic Versioning.  libXaw3dXft version numbers no
   longer have anything to do with libXaw3d releases and no longer have a
